--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
   },
   "devDependencies": {
     "parcel-bundler": "^1.9.4",
-    "parcel-plugin-handlebars-precompile": "^0.2.0",
+    "parcel-plugin-handlebars-precompile": "^1.0.2",
     "parcel-plugin-nuke-dist": "^1.0.1",
     "posthtml-include": "^1.6.2",
     "sass": "^1.32.8"
+  },
+  "dependencies": {
+    "lodash.debounce": "^4.0.8",
+    "notiflix": "^3.2.2"
   }
 }
